pulling data from API through console

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Elite Media Design</title>
     <!--Link to CSS reset-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -19,15 +20,15 @@
 <body>
 
     <header>
-
+        <div id="foodView"></div>
     </header>
 
     <footer>
-
     </footer>
 
     <!--Javascript file-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/logic.js"></script>
 
 </body>
