pulling in one category from API

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
+    <!-- responsive screen size viewport code-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Elite Media Design</title>
     <!--Link to CSS reset-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Link to Materialize-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Google font-->
@@ -20,15 +22,18 @@
 <body>
 
     <header>
-        <div id="foodView"></div>
     </header>
+   
+   
+    <div id="foodView"></div>
 
     <footer>
     </footer>
 
+    <!--JQuery JS-->
+    <script src="https://code.jquery.com/jquery.js"></script>
+
     <!--Javascript file-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/logic.js"></script>
 
 </body>
