starting to add side nav

--- a/index.html
+++ b/index.html
@@ -28,17 +28,39 @@
             <img src ="assets/images/image2vector.svg" id="logo" alt= "EMD logo SVG"/>
         </div>
         
+        <!-- Navigation bar -->
         <nav id="content">
             <div class="nav-wrapper brand-logo center">
               <ul id="nav-mobile">
+                <li><a href="index.html">Home</a></li>
                 <li><a href=#services>Services</a></li>
                 <li><a href=#about>About</a></li>
                 <li><a href=#dessert>Dessert</a></li>
-                <li><a href=#contact><i class="medium material-icons" id="contact-form">email</i></div></a></li>
+                <li><a href="contact.html"><i class="medium material-icons">email</i></div></a></li>
               </ul>
             </div>
           </nav>
-       
+
+        <!-- side navigation for mobile -->
+        <div id="sidebar-wrapper">
+          <div class="col hide-on-large-only s12">
+            <ul id="slide-out" class="sidenav">
+              <li><div class="user-view">
+                <div class="background">
+                  <img src="assets/images/image2vector.svg">
+                </div>
+                <a href="#name"><span class="white-text name">John Doe</span></a>
+                <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
+              </div></li>
+                <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+                <li><a href="#!">Second Link</a></li>
+                <li><div class="divider"></div></li>
+                <li><a class="subheader">Subheader</a></li>
+                <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+              </ul>
+            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          </div>
+        </div>
     </header> 
    
     <div class="container">
@@ -82,9 +104,6 @@
             </div>
           </div>
     </footer>
-
-    <!--JQuery JS-->
-    <script src="https://code.jquery.com/jquery.js"></script>
 
     <!--Javascript file-->
     <script src="assets/javascript/logic.js"></script>
