--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul id="slide-out" class="sidenav">
               <li><div class="user-view">
                 <div class="background">
-                  <img src="assets/images/image2vector.svg">
+                  <img src="assets/images/videocam.jpg">
                 </div>
                 <a href="#name"><span class="white-text name">John Doe</span></a>
                 <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
@@ -62,6 +62,15 @@
           </div>
         </div>
     </header> 
+
+    <!-- photo carousel -->
+    <div class="carousel" id="carousel-auto">
+      <a class="carousel-item" href="#one!"><img src="assets/images/editing.jpg"></a>
+      <a class="carousel-item" href="#two!"><img src="assets/images/videocam.jpg"></a>
+      <a class="carousel-item" href="#three!"><img src="assets/images/camcorder.jpg"></a>
+      <a class="carousel-item" href="#four!"><img src="assets/images/photography.jpg"></a>
+      <a class="carousel-item" href="#five!"><img src="assets/images/computers.jpg"></a>
+    </div>
    
     <div class="container">
         
