add links and photo to sidenav

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,27 @@
             </div>
           </nav> 
     </header> 
+
+    <!-- side navigation for mobile -->
+    <div id="sidebar-wrapper">
+      <div class="col hide-on-large-only s12">
+        <ul id="slide-out" class="sidenav">
+          <li><div class="user-view">
+            <div class="background">
+              <img src="assets/images/videocam-side.jpg">
+            </div>
+          </div></li>
+          <div class="side-links">
+            <li><a href="index.html">Home</a></li>
+            <li><div class="divider"></div></li>
+            <li><a href="index.html">Services</a></li>
+            <li><a href="index.html">Dessert</a></li>
+            <li><a href="contact.html"><i class="material-icons">email</i>Contact</a></li>
+          </div>
+          </ul>
+        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </div>
    
     <div class="container">
         <div class="row" id="contact-form">
