--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
             <ul id="slide-out" class="sidenav">
               <li><div class="user-view">
                 <div class="background">
-                  <img src="assets/images/videocam.jpg">
+                  <img src="assets/images/videocam-side.jpg">
                 </div>
-                <a href="#name"><span class="white-text name">John Doe</span></a>
-                <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
               </div></li>
-                <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-                <li><a href="#!">Second Link</a></li>
+              <div class="side-links">
+                <li><a href="index.html">Home</a></li>
                 <li><div class="divider"></div></li>
-                <li><a class="subheader">Subheader</a></li>
-                <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+                <li><a href="index.html">Services</a></li>
+                <li><a href="index.html">Dessert</a></li>
+                <li><a href="contact.html"><i class="material-icons">email</i>Contact</a></li>
+              </div>
               </ul>
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           </div>
