styled dessert section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <header>
-        <div>
+        <div id="logo-space">
             <img src ="assets/images/image2vector.svg" id="logo" alt= "EMD logo SVG"/>
         </div>
         
