--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
     </div>
    
     <div class="container">
+      <h3>Contact</h3>
         <div class="row" id="contact-form">
             <form class="col s12">
               <div class="row">
