filled in contact page

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     </header> 
 
     <!-- side navigation for mobile -->
-    <div id="sidebar-wrapper">
+    <div id="sidebar-wrapper" class="center-align">
       <div class="col hide-on-large-only s12">
         <ul id="slide-out" class="sidenav">
           <li><div class="user-view">
@@ -61,7 +61,16 @@
     </div>
    
     <div class="container">
-      <h3>Contact</h3>
+      <h3 id="contact-title">Contact</h3>
+        <p class="contact-info">
+          Phone: 763-123-1234
+          <br><br>
+          Email: <a href="mailto:info@elitemediadesign.com">info@elitemediadesign.com</a>
+          <br><br>
+          Address: 80 S 8th St., Suite #005
+          <br>
+          Minneapolis, MN 55402
+        </p>
         <div class="row" id="contact-form">
             <form class="col s12">
               <div class="row">
