--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 <body>
 
     <header>
-        <div>
+        <div class="logo-space">
             <img src ="assets/images/image2vector.svg" id="logo" alt= "EMD logo SVG"/>
         </div>
         
@@ -109,30 +109,34 @@
     </div> 
 
     <footer class="page-footer">
-        <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
+      <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">Elite Media Design</h5>
+              <p class="grey-text text-lighten-4"> 
+          
+                Phone: 763-123-1234
+                <br>
+                Email: <a href="mailto:info@elitemediadesign.com">info@elitemediadesign.com</a>
+                <br>
+                Address: 80 S 8th St., Suite #005
+                <br>
+                Minneapolis, MN 55402
+              </p></p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">EMD</h5>
+              <img src ="assets/images/image2vector.svg" id="logo-foot" alt= "EMD logo SVG"/>
             </div>
           </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          © 2021 Faye Creative
+          <a class="grey-text text-lighten-4 right" href="contact.html">Contact</a>
           </div>
-    </footer>
+        </div>
+  </footer>
 
     <!--Javascript file-->
     <script src="assets/javascript/logic.js"></script>
