--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
       </div>
     </div>
    
+    <!-- Main content - contact information -->
     <div class="container">
       <h3 id="contact-title">Contact</h3>
         <p class="contact-info">
@@ -71,6 +72,8 @@
           <br>
           Minneapolis, MN 55402
         </p>
+
+        <!-- contact form -->
         <div class="row" id="contact-form">
             <form class="col s12">
               <div class="row">
@@ -107,14 +110,14 @@
             </form>
           </div>
     </div> 
-
+    
+    <!-- footer -->
     <footer class="page-footer">
       <div class="container">
           <div class="row">
             <div class="col l6 s12">
               <h5 class="white-text">Elite Media Design</h5>
               <p class="grey-text text-lighten-4"> 
-          
                 Phone: 763-123-1234
                 <br>
                 Email: <a href="mailto:info@elitemediadesign.com">info@elitemediadesign.com</a>
@@ -140,7 +143,5 @@
 
     <!--Javascript file-->
     <script src="assets/javascript/logic.js"></script>
-
 </body>
-
 </html>
