--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                   <div class="side-links">
                     <li><a href="index.html">Home</a></li>
                     <li><div class="divider"></div></li>
-                    <li><a href="index.html">Services</a></li>
-                    <li><a href="index.html">Dessert</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#dessert">Dessert</a></li>
                     <li><a href="contact.html"><i class="material-icons">email</i>Contact</a></li>
                   </div>
                   </ul>
@@ -144,7 +145,7 @@
         <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">Elite Media Design</h5>
+                <h5 class="white-text">[Elite Media Design](https://jennifer0101.github.io/EMD/</h5>
                 <p class="grey-text text-lighten-4"> 
                   Phone: 763-123-1234
                   <br>
