--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">[Elite Media Design](https://jennifer0101.github.io/EMD/</h5>
+                <h5 class="white-text">Elite Media Design</h5>
                 <p class="grey-text text-lighten-4"> 
                   Phone: 763-123-1234
                   <br>
