redesign navbar, logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- responsive screen size viewport code-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite Media Design</title>
+    <title>Fun With Cocktails</title>
     <!--Link to CSS reset-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!-- Link to CSS style sheet-->
@@ -22,12 +22,10 @@
 
 <body>
     <header>
-        <div class="logo-space">
-            <img src ="assets/images/image2vector.svg" id="logo" alt= "EMD logo SVG"/>
-        </div>
         
         <!-- Navigation bar -->
-        <nav id="content">
+        <div class="navbar-fixed">
+          <nav id="content">
             <div class="nav-wrapper brand-logo center">
               <ul id="nav-mobile">
                 <li><a href="index.html">Home</a></li>
@@ -36,6 +34,7 @@
                 <li><a href=#dessert>Dessert</a></li>
                 <li><a href="contact.html"><i class="medium material-icons">email</i></div></a></li>
               </ul>
+        </div>
 
             <!-- side navigation for mobile -->
             <div id="sidebar-wrapper">
