delete images and contact page

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         
         <!-- Navigation bar -->
         <div class="navbar-fixed">
-          <nav id="content">
+          <nav id="content" class="blue lighten-4">
             <div class="nav-wrapper brand-logo center">
               <ul id="nav-mobile">
                 <li><a href="index.html">Home</a></li>
                 <li><a href=#services>Services</a></li>
                 <li><a href=#about>About</a></li>
                 <li><a href=#dessert>Dessert</a></li>
-                <li><a href="contact.html"><i class="medium material-icons">email</i></div></a></li>
+                <li><a href=#contact>Contact</a></li>
               </ul>
         </div>
 
@@ -51,7 +51,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#dessert">Dessert</a></li>
-                    <li><a href="contact.html"><i class="material-icons">email</i>Contact</a></li>
+                    <li><a href="#dessert">Contact</a></li>
                   </div>
                   </ul>
                 <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -140,34 +140,31 @@
     </div> 
 
     <!-- Footer -->
-    <footer class="page-footer">
+    <section id="contact" class ="scrollspy">
+    <footer class="page-footer blue lighten-4">
         <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">Elite Media Design</h5>
-                <p class="grey-text text-lighten-4"> 
-                  Phone: 763-123-1234
+                <h5 class="text-color">Fun With Cocktails</h5>
+                <p class="text-color"> 
+                  <a href="tel:5551234567">Call (555)123-4567</a>
                   <br>
-                  Email: <a href="mailto:info@elitemediadesign.com">info@elitemediadesign.com</a>
+                  Email: <a href="mailto:jennifer@fayecreative.com">jennifer@fayecreative.com</a>
                   <br>
-                  Address: 80 S 8th St., Suite #005
+                  5 Lorem Ipsum Sit Amet
                   <br>
-                  Minneapolis, MN 55402
+                  Lorem, MN 99999
                 </p></p>
               </div>
               <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">EMD</h5>
-                <img src ="assets/images/image2vector.svg" id="logo-foot" alt= "EMD logo SVG"/>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
-            <div class="container">
-            © 2021 Faye Creative
-            <a class="grey-text text-lighten-4 right" href="contact.html">Contact</a>
-            </div>
-          </div>
+            <div class="row text-color">© 2021 Faye Creative</div>
+        </div>
     </footer>
+    </section>
 
     <!--Javascript file-->
     <script src="assets/javascript/logic.js"></script>
