pulling one ingredient and measure from db

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- Cocktail section - scrollsby  -->
         <section id="cocktails" class ="scrollspy">
           <div class="center-align">
-            <a class="waves-effect waves-light red btn-large" id="button">Click Me</a>
+            <a class="waves-effect waves-light red btn-small" id="button">Click Me</a>
           </div>
             <div id="cocktailView"></div>
         </section>
