display value ommitting null in console log

--- a/index.html
+++ b/index.html
@@ -62,9 +62,18 @@
       </header> 
 
 
-    <!-- Title Picture -->
-    
-    <img src="assets/images/title.png" id="title-pic">
+    <div class="container">
+      <div class="row">
+        <div class="col s7">
+           <!-- Title Picture -->
+          <img src="assets/images/title.png" id="title-pic">    
+        </div>
+        <div class="col s4">
+        </div>
+      </div>
+    </div>  
+
+   
 
     <!-- main content -->
     <div class="container">
