first button fills img and name, second button click fills ingr and instru

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div id="instruView"></div>
         </div>
         <div class="col l3 m4 s12" id="clkinst">
-          
+          <a class="btn-floating waves-effect waves-light red btn-large" id="button2"><i class="material-icons right">list</i>Click Me</a>
         </div>
       </div>
     </section>
