--- a/index.html
+++ b/index.html
@@ -29,34 +29,13 @@
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <div class="nav-wrapper brand-logo center">
               <ul id="nav-mobile">
-                <li><a href="index.html">Home</a></li>
                 <li><a href=#cocktails>Cocktails</a></li>
                 <li><a href=#contact>Contact</a></li>
               </ul>
               </div>
             </nav>
           </div>
-
-            <!-- side navigation for mobile -->
-            <div id="sidebar-wrapper">
-              <div class="col hide-on-large-only s12">
-                <ul id="slide-out" class="sidenav">
-                  <li><div class="user-view">
-                    <div class="background red">
-                      <img src="assets/images/slide-out.png">
-                    </div>
-                  </div></li>
-                  <div class="side-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><div class="divider"></div></li>
-                    <li><a href="#cocktails">Cocktails</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                  </div>
-                  </ul>
-              </div>
-            </div>
-          
-      </header> 
+    </header> 
 
     <!-- main content -->
     <!-- Cocktail section - scrollsby  -->
@@ -92,7 +71,11 @@
           <div id="instruView"></div>
         </div>
         <div class="col l3 m4 s12" id="clkinst">
-          <a class="btn-floating waves-effect waves-light red btn-large" id="button2"><i class="material-icons right">list</i>Click Me</a>
+          <div id="clickspot2">
+            <p id="clicktext2">Click to see measurements <br> and directions!</p>
+            <a class="btn-floating waves-effect waves-light red btn-large" id="button2"><i class="material-icons right">list</i>Click Me</a>
+            <i class="large material-icons" id="arrow2">arrow_back</i>
+          </div>
         </div>
       </div>
     </section>
@@ -103,16 +86,10 @@
         <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="text-color">Fun With Cocktails</h5>
-                <p class="text-color"> 
-                  <a href="tel:5551234567">Call (555)123-4567</a>
-                  <br>
-                  Email: <a href="mailto:jennifer@fayecreative.com">jennifer@fayecreative.com</a>
-                  <br>
-                  5 Lorem Ipsum Sit Amet
-                  <br>
-                  Lorem, MN 99999
-                </p></p>
+                <h3 class="text-color" id="footer-text">Fun With Cocktails</h5>
+                <p class="text-color" id="quote"> 
+                  My favorite drink <br> is the next one.
+                </p>
               </div>
               <div class="col l4 offset-l2 s12">
               </div>
