css to swap column sections

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper amber">
-           
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="brand-logo center hide-on-med-and-down">
               <li><a href=#cocktails><i class="material-icons right">local_bar</i>Cocktails</a></li>
@@ -57,7 +56,8 @@
               <div class= "animated tdFadeIn" id="clickspot">
                 <p id="clicktext">Click to see a<br>random cocktail!</p>
                 <a class="btn-floating waves-effect waves-light red btn-large" id="button"><i class="material-icons right">local_bar</i>Click Me</a>
-                <i class="medium material-icons hide-on-small-only" id="arrow">arrow_forward</i>
+                <i class="medium material-icons hide-on-med-and-down" id="arrow">arrow_forward</i>
+                <i class="medium material-icons hide-on-large-only" id="arrow">arrow_downward</i>
               </div>
             </div>
           </div> 
@@ -70,7 +70,7 @@
           </div>
         </div>
       </div>
-      <div class="row padmar">
+      <div class="row padmar flex-s">
         <div class="col l4 m12 s12" id="ingr">
           <div id="ingrView"></div>
         </div>
@@ -82,7 +82,8 @@
             <i class="medium material-icons hide-on-small-only class animated tdFadeIn" id="arrow3">arrow_downward</i>
             <p id="clicktext2" class= "animated tdFadeIn">Click to see measurements <br> and directions!</p>
             <a class="btn-floating waves-effect waves-light red btn-large animated tdFadeIn" id="button2"><i class="material-icons right">list</i>Click Me</a>
-            <i class="medium material-icons hide-on-small-only animated tdFadeIn" id="arrow2">arrow_back</i>
+            <i class="medium material-icons hide-on-med-and-down animated tdFadeIn" id="arrow2">arrow_back</i>
+            <i class="medium material-icons hide-on-large-only animated tdFadeIn" id="arrow2">arrow_downward</i>
           </div>
         </div>
       </div>
